--- a/index.html
+++ b/index.html
@@ -17,49 +17,58 @@
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
+
 <body>
     <!-- BARRA DE NAVEGACION-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm"
+        style="height: 75px; font-family: 'Poppins', sans-serif;">
         <div class="container-fluid">
-
-            <!-- Logo en lugar del texto -->
+            <!-- Logo -->
             <a class="navbar-brand" href="#">
-                <img src="assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 100px;">
+                <img src="assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 110px;">
             </a>
 
-            <!-- Botón de hamburguesa para pantallas pequeñas -->
+            <!-- Botón responsive -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <!-- Menú de navegación -->
+            <!-- Menú -->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto d-flex align-items-center justify-content-center w-100 gap-3">
+                <ul class="navbar-nav ms-auto d-flex align-items-center justify-content-end w-100 gap-3">
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-custom-blue" href="index.html">
-                            <i class="bi bi-house-door-fill me-1"></i> INICIO
+                        <a class="nav-link nav-custom" href="index.html">
+                            <i class="fa-solid fa-house-chimney me-2"></i> Inicio
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-custom-blue" href="pages/Nosotros.html">
-                            <i class="bi bi-people-fill me-1"></i> NOSOTROS
+                        <a class="nav-link nav-custom" href="pages/Nosotros.html">
+                            <i class="fa-solid fa-users-line me-2"></i> Nosotros
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-custom-blue" href="pages/Servicios.html">
-                            <i class="bi bi-tools me-1"></i> SERVICIOS
+                        <a class="nav-link nav-custom" href="pages/Servicios.html">
+                            <i class="fa-solid fa-clipboard-list me-2"></i> Servicios
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-custom-blue" href="pages/Contactos.html">
-                            <i class="bi bi-envelope-fill me-1"></i> CONTACTO
+                        <a class="nav-link nav-custom" href="pages/Contactos.html">
+                            <i class="fa-solid fa-envelope-open-text me-2"></i>Contactos
                         </a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link nav-custom" href="#">
+
+                        </a>
+                    </li>
+
                 </ul>
             </div>
         </div>
     </nav>
-    <!--FIN BARRA DE NAVEGACION-->
+
+
 
     <!--CABECERA CARROUSEL-->
     <header class="bg-dark p-0">
@@ -77,11 +86,11 @@
             <div class="carousel-inner" style="height: 300px;">
                 <div class="carousel-item active d-flex justify-content-center align-items-center bg-dark fade-in"
                     style="height: 100%;">
-                    <h1 class="display-4 fw-bold text-white text-center m-0">Bienvenido</h1>
+                    <h1 class="display-4 fw-bold text-white text-center m-0">Bienvenido a ServiFacil</h1>
                 </div>
                 <div class="carousel-item d-flex justify-content-center align-items-center bg-dark"
                     style="height: 100%;">
-                    <h1 class="display-4 fw-bold text-white text-center m-0">Servifacil, tu mejor opción</h1>
+                    <h1 class="display-4 fw-bold text-white text-center m-0">Somos, tu mejor opción</h1>
                 </div>
                 <div class="carousel-item d-flex justify-content-center align-items-center bg-dark"
                     style="height: 100%;">
@@ -107,7 +116,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-stretch">
                 <div class="col-xl-8 d-flex flex-column">
-                    <h2 class="fw-bolder fs-5 mb-4">UBICACIÓN</h2>
+                    <h2 class="fw-bolder fs-5 mb-4 text-center"> NUESTRA UBICACIÓN</h2>
                     <div class="mb-5 flex-grow-1">
                         <div class="ratio ratio-16x9 h-100">
                             <iframe
@@ -145,7 +154,7 @@
 
 
     <!--FOOTER-->
-    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+    <footer class="text-center text-lg-start text-white mt-2 bg-dark">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
             <!-- Section: Links -->
@@ -169,13 +178,13 @@
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold">SERVICIOS</h6>
                         <p class="text-white">
-                            Albanileria
+                            Albañileria
                         </p>
                         <p class="text-white">
                             Fontaneria
                         </p>
                         <p class="text-white">
-                            <a>Electricidad</a>
+                            Electricidad
                         </p>
                         <p class="text-white">
                             Reparacion y Mantenimiento en el Hogar
@@ -234,4 +243,5 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
