--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -19,58 +19,69 @@
 
 <body>
 
-    <!-- BARRA DE NAVEGACIÓN-->
-    <nav class="navbar navbar-expand-lg navbar-dark position-absolute top-0 start-0 w-100" style="z-index: 10;">
-        <div class="container d-flex align-items-center justify-content-between">
-            <a class="navbar-brand" href="#!">
-                <img src="../assets/img/LogoServifacil.png" alt="Logo del negocio" style="height: 60px; width: 90px;">
+    <!-- BARRA DE NAVEGACION-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm"
+        style="height: 75px; font-family: 'Poppins', sans-serif;">
+        <div class="container-fluid">
+            <!-- Logo -->
+            <a class="navbar-brand" href="#">
+                <img src="../assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 110px;">
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+            <!-- Botón responsive -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto me-auto text-center">
+            <!-- Menú -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto d-flex align-items-center justify-content-end w-100 gap-3">
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-custom-blue" aria-current="page" href="../index.html">
-                            <i class="bi bi-house-door-fill me-1"></i> INICIO
+                        <a class="nav-link nav-custom" href="../index.html">
+                            <i class="fa-solid fa-house-chimney me-2"></i> Inicio
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-custom-blue" href="../pages/Nosotros.html">
-                            <i class="bi bi-people-fill me-1"></i> NOSOTROS
+                        <a class="nav-link nav-custom" href="../pages/Nosotros.html">
+                            <i class="fa-solid fa-users-line me-2"></i> Nosotros
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-custom-blue" href="../pages/Servicios.html">
-                            <i class="bi bi-tools me-1"></i> SERVICIOS
+                        <a class="nav-link nav-custom" href="../pages/Servicios.html">
+                            <i class="fa-solid fa-clipboard-list me-2"></i> Servicios
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-custom-blue" href="../pages/Contactos.html">
-                            <i class="bi bi-envelope-fill me-1"></i> CONTACTOS
+                        <a class="nav-link nav-custom" href="../pages/Contactos.html">
+                            <i class="fa-solid fa-envelope-open-text me-2"></i>Contactos
+                        </a>
+                    </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link nav-custom" href="#">
+
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+
     <!--FIN BARRA DE NAVEGACION-->
 
 
-    <!-- CABECERA -->
-    <header class="hero-header position-relative d-flex align-items-center justify-content-center text-center">
-        <img src="../assets/img/shutterstock_164852135-e1593077044741.jpg"
-            class="position-absolute w-100 h-100 object-fit-cover opacity-50 fade-in-bg" alt="Fondo ServiFacil" />
-        <div class="content position-relative z-1 fade-in-text">
-            <h1 class="display-4 fw-bold text-custom-blue">Nosotros</h1>
-            <p class="lead fw-normal text-custom-blue">Soluciones confiables para tu hogar y negocio.</p>
-
+    <!--CABECERA CARROUSEL-->
+    <header id="header-mvv" class="fade-in-header text-white d-flex align-items-center justify-content-center">
+        <div class="overlay"></div>
+        <div class="container text-center header-content">
+            <h1 class="display-4 fw-bold mb-3">Misión,Visión y Valores</h1>
+            <p class="lead">Nos Caracterizamos por Cumplir con Usted.</p>
         </div>
     </header>
-    <!--FIN CABECERA-->
+
+    <!--FIN CARROUSEL-->
+
 
 
     <!-- Seccion de Mision y Vision -->
@@ -82,7 +93,7 @@
                 <div class="col-12 col-lg-4 d-flex">
                     <article>
                         <div class="card border-0 d-flex flex-column" style="height: 100%;">
-                            <img class="card-img-top img-fluid m-0" loading="lazy" src="../assets/img/Mision.webp"
+                            <img class="card-img-top img-fluid m-0" loading="lazy" src="../assets/img/blog113(1).jpg"
                                 alt="Our Approach">
                             <div class="card-body border  p-4 d-flex flex-column">
                                 <div class="entry-header mb-3">
@@ -105,8 +116,8 @@
                 <div class="col-12 col-lg-4 d-flex">
                     <article>
                         <div class="card border-0 d-flex flex-column" style="min-height: 100%;">
-                            <img class="card-img-top img-fluid m-0" loading="lazy" src="../assets/img/vision.png"
-                                alt="Our Vision">
+                            <img class="card-img-top img-fluid m-0" loading="lazy"
+                                src="../assets/img/Autonomia-e-independencia.jpg" alt="Our Vision">
                             <div class="card-body border p-4">
                                 <div class="entry-header mb-3">
                                     <h2 class="card-title entry-title h4 mb-0">
@@ -130,7 +141,7 @@
                     <article>
                         <div class="card border-0 d-flex flex-column" style="min-height: 100%;">
                             <img class="card-img-top img-fluid m-0" loading="lazy"
-                                src="../assets/img/valores-corporativos-de-una-empresa.jpg" alt="Our Approach">
+                                src="../assets/img/misionyvison-scaled.jpg" alt="Our Approach">
                             <div class="card-body border p-4">
                                 <div class="entry-header mb-3">
                                     <h2 class="card-title entry-title h4 mb-0">
@@ -165,7 +176,7 @@
     </section>
 
     <!--FOOTER-->
-    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+    <footer class="text-center text-lg-start text-white mt-2 bg-dark">
         <!-- Grid container -->
         <div class="container p-4 pb-0">
             <!-- Section: Links -->
@@ -189,13 +200,13 @@
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold">SERVICIOS</h6>
                         <p class="text-white">
-                            Albanileria
+                            Albañileria
                         </p>
                         <p class="text-white">
                             Fontaneria
                         </p>
                         <p class="text-white">
-                            <a>Electricidad</a>
+                            Electricidad
                         </p>
                         <p class="text-white">
                             Reparacion y Mantenimiento en el Hogar
@@ -248,6 +259,7 @@
         </div>
         <!-- Copyright -->
     </footer>
+
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
